// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer should render Drawer when it closes 1`] = `
<WithStyles(ForwardRef(Drawer))
  anchor="left"
  className=""
  classes={
    Object {
      "paper": "",
    }
  }
  open={false}
  variant="persistent"
>
  <div
    className=""
  >
    Blogs
  </div>
  <WithStyles(WithStyles(ForwardRef(List)))>
    <WithStyles(ForwardRef(ListItem))
      button={true}
      data-test-id="drawer-item-dashboard"
      key="dashboard"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <HomeIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Dashboard"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(ListItem))
      button={true}
      data-test-id="drawer-item-posts"
      key="posts"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <LibraryBooksIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Posts"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(ListItem))
      button={true}
      data-test-id="drawer-item-post"
      key="post"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <PostAddIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Write your first post"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(ListItem))
      button={true}
      data-test-id="drawer-item-users"
      key="users"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <PeopleIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Users"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(ListItem))
      button={true}
      data-test-id="drawer-item-profile"
      key="profile"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <AccountBoxIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Profile"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(ListItem))
      button={true}
      data-test-id="drawer-item-settings"
      key="settings"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <SettingsIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Settings"
      />
    </WithStyles(ForwardRef(ListItem))>
  </WithStyles(WithStyles(ForwardRef(List)))>
</WithStyles(ForwardRef(Drawer))>
`;

exports[`Drawer should render Drawer when it opens 1`] = `
<WithStyles(ForwardRef(Drawer))
  anchor="left"
  className=""
  classes={
    Object {
      "paper": "",
    }
  }
  open={true}
  variant="persistent"
>
  <div
    className=""
  >
    Blogs
  </div>
  <WithStyles(WithStyles(ForwardRef(List)))>
    <WithStyles(ForwardRef(ListItem))
      button={true}
      data-test-id="drawer-item-dashboard"
      key="dashboard"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <HomeIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Dashboard"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(ListItem))
      button={true}
      data-test-id="drawer-item-posts"
      key="posts"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <LibraryBooksIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Posts"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(ListItem))
      button={true}
      data-test-id="drawer-item-post"
      key="post"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <PostAddIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Write your first post"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(ListItem))
      button={true}
      data-test-id="drawer-item-users"
      key="users"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <PeopleIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Users"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(ListItem))
      button={true}
      data-test-id="drawer-item-profile"
      key="profile"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <AccountBoxIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Profile"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(ListItem))
      button={true}
      data-test-id="drawer-item-settings"
      key="settings"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemIcon))>
        <SettingsIcon />
      </WithStyles(ForwardRef(ListItemIcon))>
      <WithStyles(ForwardRef(ListItemText))
        primary="Settings"
      />
    </WithStyles(ForwardRef(ListItem))>
  </WithStyles(WithStyles(ForwardRef(List)))>
</WithStyles(ForwardRef(Drawer))>
`;
